# zephyr_usb_cdc_comm

./: .gitignore  CMakeLists.txt  prj.conf
boards/: promicro_nrf52840.conf  promicro_nrf52840.overlay  stm32_min_dev.conf  stm32_min_dev.overlay
src/: main.c
src/comm/: usb_comm.c  usb_comm.h
src/sensor/: apds9960.c  apds9960.h
src/user_app/: main_app.c  msg_app.c  msg_app.h  sys_app.h
